{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 16,
  "lineage": "29987505-4daa-c522-d56f-4e097a346aa2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3bb7d38a198536c",
            "arn": "arn:aws:ec2:us-east-1:777644549717:elastic-ip/eipalloc-0c3bb7d38a198536c",
            "association_id": "eipassoc-0a0f37e083d502940",
            "domain": "vpc",
            "id": "eipalloc-0c3bb7d38a198536c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cc8134f24fee4f18",
            "private_dns": "ip-10-0-1-218.ec2.internal",
            "private_ip": "10.0.1.218",
            "public_dns": "ec2-3-231-76-18.compute-1.amazonaws.com",
            "public_ip": "3.231.76.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777644549717:internet-gateway/igw-07d73dd3c6ec95d94",
            "id": "igw-07d73dd3c6ec95d94",
            "owner_id": "777644549717",
            "tags": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "tags_all": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "vpc_id": "vpc-05c0f5f1f94732e9b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3bb7d38a198536c",
            "association_id": "eipassoc-0a0f37e083d502940",
            "connectivity_type": "public",
            "id": "nat-01bdaef2aaf6d2659",
            "network_interface_id": "eni-0cc8134f24fee4f18",
            "private_ip": "10.0.1.218",
            "public_ip": "3.231.76.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01472eda00e3c1683",
            "tags": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "tags_all": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777644549717:route-table/rtb-0e0569f2f3041bf67",
            "id": "rtb-0e0569f2f3041bf67",
            "owner_id": "777644549717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01bdaef2aaf6d2659",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "tags_all": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c0f5f1f94732e9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777644549717:route-table/rtb-0445bede205e9e44d",
            "id": "rtb-0445bede205e9e44d",
            "owner_id": "777644549717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d73dd3c6ec95d94",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "tags_all": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c0f5f1f94732e9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9b1516db6dd800f",
            "route_table_id": "rtb-0e0569f2f3041bf67",
            "subnet_id": "subnet-001e4bbdbacc569ca"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d376d61230ff00b5",
            "route_table_id": "rtb-0e0569f2f3041bf67",
            "subnet_id": "subnet-08fd0909058aebfdd"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d819d5ff80366fc",
            "route_table_id": "rtb-0445bede205e9e44d",
            "subnet_id": "subnet-01472eda00e3c1683"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069e8f808b6eabee1",
            "route_table_id": "rtb-0445bede205e9e44d",
            "subnet_id": "subnet-0f13cda105246449e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777644549717:subnet/subnet-001e4bbdbacc569ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001e4bbdbacc569ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "777644549717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "tags_all": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "vpc_id": "vpc-05c0f5f1f94732e9b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777644549717:subnet/subnet-08fd0909058aebfdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fd0909058aebfdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "777644549717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "tags_all": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "vpc_id": "vpc-05c0f5f1f94732e9b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777644549717:subnet/subnet-01472eda00e3c1683",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01472eda00e3c1683",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777644549717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "tags_all": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "vpc_id": "vpc-05c0f5f1f94732e9b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777644549717:subnet/subnet-0f13cda105246449e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f13cda105246449e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777644549717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "tags_all": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "vpc_id": "vpc-05c0f5f1f94732e9b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777644549717:vpc/vpc-05c0f5f1f94732e9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00471ce4bc6dbe963",
            "default_route_table_id": "rtb-05a0220593cebce4b",
            "default_security_group_id": "sg-03eea95e338edd48a",
            "dhcp_options_id": "dopt-0a4cd222552d951be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c0f5f1f94732e9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a0220593cebce4b",
            "owner_id": "777644549717",
            "tags": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            },
            "tags_all": {
              "DevopsName": "Shimon",
              "Environment": "dev",
              "GeneratedBy": "Terraform",
              "Owner": "Shimon Mizrahi",
              "Scope": "for deploying OpenVPN"
            }
          }
        }
      ]
    }
  ]
}